# madeline

./: Cargo.toml
jit/: Cargo.toml
jit/src/: dag.rs  jit.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
madeline/: Cargo.toml
madeline/src/: main.rs
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  parser.rs
renderer/: Cargo.toml
renderer/src/: main.rs
renderer/src/drawing/: mod.rs
src/: bounds.rs  color.rs  dag.rs  image.rs  main.rs  state.rs  ui_primitives.rs  util.rs  vec2.rs
src/drawing/: mod.rs
src/drawing/pipelines/rect/: mod.rs
ui-primitives/: Cargo.toml
ui-primitives/src/: lib.rs
